stacking java changes